2008-05-03  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde-project.el (pde-project-find-file): Using uniquified
	file name instead of full path. Idea comes from find-file-in-project.el

2008-04-30  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde-project.el (pde-file-list-ignore-file): Add ignore file
	list for pde-project-find-file

2008-04-26  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde-util.el (pde-module-bounds): new function to detect
	perl module at point.

2008-04-23  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde-project.el (pde-project-find-file): fix bug: use bind
	default-directory local instead of cd.

2008-04-20  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde-util.el (pde-yaml-dump, pde-yaml-load): Add commands
	for read or dump YAML data.

2008-04-19  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde-project.el (pde-project-find-file): New command to find
	file in current project.

2008-04-13  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/compile-dwim.el (compile-dwim-alist): Make win32 happy.

	* lisp/tree-mode.el (tree-mode-button-current-line): fixed it

2008-04-01  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/compile-dwim.el (compile-dwim-calculate-command): Test
	whether current file name is changed when generate new commands.
	(compile-dwim-calculate-command): Make compile-dwim recache when
	change file name

2008-03-19  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/re-builder-x.el (reb-perl-start-process): coding system
	support

	* lisp/tempo-x.el (tempo-x-insert-form): Barf when variable is not
	source before

2008-03-18  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/re-builder-x.el: New library for test regexp

	* lisp/perldoc.el (perldoc-read-module, perldoc-module-ap): find
	not module item, too

2008-03-11  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/inf-perl.el (inf-perl-set-cwd): echo working directory

2008-03-09  Ye Wenbin  <wenbinye@gmail.com>

	* lisp/pde.el (pde-perl-mode-hook): Fix error message

	* Release PDE-v0.2.6
