@@ -263,10 +263,10 @@ function is the same, add \".pod\" for the module name. For example,
       (setq def (intern-soft def perldoc-obarray))
       (if def
           (setq mod (symbol-name def))
-        (when (and (string-match "::" mod)
-                   (yes-or-no-p "Seem like a Perl module. If sure it is installed, you should update cache. Update now? "))
-          (perldoc-build-obarray t)
-          (signal 'quit "Please wait for a while..."))))
+        (if (and (string-match "::" mod)
+                 (yes-or-no-p (concat mod " Seem like a Perl module. Add it temporarily (use C-u M-x perldoc-build-obarray to update)")))
+            (setq def (intern mod perldoc-obarray))
+          (signal 'quit "quit"))))
     (and def
          (or (not modulep)
              (eq (perldoc-symbol-type def) 'module))
